--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,3 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [ {cowboy, "", {git, "git://github.com/extend/cowboy.git", {branch, "master"}}}
+       ]}.
