--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
 {erl_opts, [debug_info]}.
 
+{preferred_otp_version, "OTP_R15B01"}.
+
 {deps, [ {cowboy, "", {git, "git://github.com/extend/cowboy.git", {branch, "master"}}}
        ]}.
